# scylla-cluster-sync-rs

./: .gitignore  Cargo.toml  LICENSE  Makefile  README-DW-SSTLoader-Processor-DR.md  README-cluster-sync-services-opt.md  README-cluster-sync-services-scale.md  README-dual-reader.md  README-tui-dash.md  README.md  docker-compose.yaml
config/: dual-reader.yaml  dual-writer-cassandra.yaml  dual-writer-scylla.yaml  dual-writer.yaml  filter-rules.yaml  indexes.yaml  sstable-loader.yaml
config/deploy/scylla-cluster-sync/: Chart.yaml  values-production.yaml  values.yaml
config/deploy/scylla-cluster-sync/templates/: __helpers.tpl  app-config.yaml  app-gateway-tls.yaml  app-gateway.yaml  app-monitoring.yaml  app-scaling.yaml  app-secrets.yaml  app.yaml
monitoring/: prometheus.yaml
monitoring/grafana/provisioning/datasources/: prometheus.yaml
services/doctore-dash/: Cargo.toml  Dockerfile  README.md  Trunk.toml  docker-compose.yml  index.html  nginx.conf
services/doctore-dash/public/: index.html
services/doctore-dash/src/: app.rs  lib.rs  main.rs  mock.rs  state.rs
services/doctore-dash/src/components/: controls.rs  filter.rs  header.rs  log.rs  mod.rs  progress.rs  stats.rs  tables.rs  throughput.rs
services/doctore-dash/style/: main.css
services/dual-reader/: Cargo.toml  Dockerfile.dual-reader  Makefile
services/dual-reader/src/: api.rs  config.rs  filter.rs  main.rs  reader.rs  reconciliation.rs  validator.rs
services/dual-writer/: Cargo.toml  Dockerfile.dual-writer  Makefile
services/dual-writer/src/: api.rs  config.rs  cql_server.rs  filter.rs  health.rs  main.rs  writer.rs
services/sstable-loader/: Cargo.toml  Dockerfile.sstable-loader  Dockerfile.sstable-loader-optimized  Makefile
services/sstable-loader/src/: api.rs  config.rs  filter.rs  index_manager.rs  loader.rs  main.rs  token_range.rs
services/tui-dash/: Cargo.toml
services/tui-dash/src/: api.rs  main.rs  mock.rs  state.rs
svc-kit/src/: lib.rs
svckit/: Cargo.toml
svckit/src/: config.rs  errors.rs  metrics.rs  types.rs
svckit/src/database/: cassandra.rs  connection.rs  factory.rs  mod.rs  query_builder.rs  retry.rs  scylla.rs
