[package]
name = "svckit"
version = "0.1.0"
edition = "2021"
authors = ["Engine Vector <admin@enginevector.io>"]
description = "Service Kit shared library for ScyllaDB/Cassandra cluster synchronization services"

[lib]
name = "svckit"
path = "src/lib.rs"

[dependencies]
# ScyllaDB driver
scylla = { version = "0.14", features = ["ssl", "cloud"] }

# Cassandra driver (for legacy compatibility)
cdrs-tokio = { version = "8.1", features = ["rust-tls"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Configuration
config = "0.14"

# Logging
tracing = "0.1"

# Metrics
prometheus = "0.13"
lazy_static = "1.5"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.10", features = ["v4", "serde"] }

