[package]
name = "dual-writer"
version.workspace = true
authors.workspace = true
edition.workspace = true

[[bin]]
name = "dual-writer"
path = "src/main.rs"

[dependencies]
scylla-sync-shared = { path = "../../svckit" }
tokio.workspace = true
async-trait.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
prometheus.workspace = true
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
config.workspace = true
uuid.workspace = true
chrono.workspace = true
futures.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
scylla.workspace = true