[package]
name = "dual-writer"
version = "0.1.0"
edition = "2021"

[dependencies]
svckit = { path = "../../svckit" }

# Async runtime
tokio = { version = "1.42", features = ["full"] }
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# HTTP (keep for health endpoint only)
axum = "0.7"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Concurrency
dashmap = "6.1"
parking_lot = "0.12"

# CLI
clap = { version = "4.5", features = ["derive"] }

uuid = { version = "1.10", features = ["v4", "serde"] }
anyhow = "1.0"

config = "0.14"

# NOTE: We do NOT need cassandra-protocol crate!
# We implemented CQL protocol parsing manually to avoid external dependencies
# and ensure production-grade control over the protocol layer