[package]
name = "tui-dash"
version = "0.1.0"
edition = "2021"
description = "Terminal UI Dashboard for scylla-cluster-sync-rs migration monitoring"
authors = ["EngineVector"]

[[bin]]
name = "tui-dash"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Async
tokio = { version = "1.43", features = ["full"] }

# HTTP client (for API calls)
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# Time
chrono = "0.4"

# Random (for demo mode)
rand = "0.8"
